# WalletConnectRust

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yaml  kdf.yaml
common/: Cargo.toml
examples/: websocket_client.rs  ws_unmanaged.rs
pairing_api/: Cargo.toml
pairing_api/examples/: pairing.rs
pairing_api/src/: crypto.rs  lib.rs  pairing.rs  pairing_url.rs  rpc.rs  session.rs  uri.rs  uri_parser.rs
pairing_api/src/rpc/: methods.rs  params.rs  shared.rs
pairing_api/src/rpc/methods/: pairing_delete.rs  pairing_extend.rs  pairing_ping.rs
relay_client/: Cargo.toml
relay_client/src/: error.rs  http.rs  lib.rs  websocket.rs
relay_client/src/websocket/: connection.rs  stream.rs
relay_rpc/: Cargo.toml
relay_rpc/src/: rpc.rs
relay_rpc/src/rpc/: error.rs  params.rs
relay_rpc/src/rpc/params/: arbitrary.rs  pairing.rs  pairing_delete.rs  pairing_extend.rs  pairing_ping.rs  params.rs  session.rs  session_delete.rs  session_event.rs  session_extend.rs  session_ping.rs  session_propose.rs  session_request.rs  session_settle.rs  session_update.rs
relay_rpc/src/rpc/params/session/: delete.rs  event.rs  extend.rs  ping.rs  propose.rs  request.rs  settle.rs  update.rs
sign_api/: Cargo.toml
sign_api/examples/: session.rs
sign_api/src/: crypto.rs  lib.rs  pairing_uri.rs  session.rs
sign_api/src/rpc/params/: session.rs
sign_api/src/rpc/params/session/: propose.rs
src/: lib.rs
wc_common/: Cargo.toml
wc_common/src/: crypto.rs  lib.rs
