[package]
name = "pairing_api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chacha20poly1305 = "0.10"
hex = "0.4.2"
lazy_static = "1.4"
paste = "1.0.15"
regex = "1.7"
relay_client = { path = "../relay_client" }
relay_rpc = { path = "../relay_rpc" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
url = "2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.22", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.22", features = ["sync", "macros"] }


[[example]]
name = "pairing"
