[package]
name = "relay_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
http = ["dep:reqwest"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
] }
data-encoding = "2.4.0"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
http = "1.0.0"
pin-project = "1.0"
relay_rpc = { path = "../relay_rpc" }
reqwest = { version = "0.12.2", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
thiserror = "1.0"
tokio = { version = "1.22", features = ["sync", "macros"] }
tokio-rustls = { version = "0.10" }
tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm.git", features = ["rustls-tls-native-roots"], rev = "8fc7e2f" }
tokio-util = "0.7"
url = "2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.7", features = ["std", "small_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.27"
rand = { version = "0.7", default-features = false, features = [
    "std",
    "small_rng",
    "wasm-bindgen",
] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-test = { version = "0.3.2" }
wasm-bindgen-futures = "0.4.21"
web-sys = { version = "0.3.55", features = ["WebSocket"] }

[lints.clippy]
indexing_slicing = "deny"
