[package]
name = "sign_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.21.2"
chacha20poly1305 = "0.10"
hex = "0.4.2"
hkdf = "0.12.4"
lazy_static = "1.4"
paste = "1.0.15"
regex = "1.10.6"
sha2 = { version = "0.10.6" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = { version = "0.8" }
