[package]
name = "sign_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21.2"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
] }
hex = "0.4.2"
hkdf = "0.12.4"
lazy_static = "1.4"
paste = "1.0.15"
regex = "1.10.6"
relay_client = { path = "../relay_client" }
relay_rpc = { path = "../relay_rpc" }
sha2 = { version = "0.10.6" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = { version = "0.8" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.22", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.22", features = ["sync", "macros"] }

[[example]]
name = "session"
